--- a/package.json
+++ b/package.json
@@ -1,33 +1,30 @@
 {
-  "name": "shopnexttask",
+  "name": "nextshop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@stripe/stripe-js": "^8.6.1",
-    "atlas": "^1.0.0-alpha.0",
-    "bcryptjs": "^3.0.3",
-    "firebase": "^12.8.0",
-    "joi": "^18.0.2",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.3",
-    "next": "16.1.2",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "react-toastify": "^11.0.5",
-    "stripe": "^20.1.2"
+    "lucide-react": "^0.309.0",
+    "next": "15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.2",
-    "tailwindcss": "^4"
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "15.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
